<resources>
    <string name="app_name">Manage Application</string>
    <string name="upload_photo">Upload</string>
    <string name="choose_photo">Choose Picture</string>
    <string name="gallery">Enter Gallery</string>
    <string name="all_permissions">All permissions are granted by user!</string>
    <string name="manage_calendar">Manage Calendar</string>
    <string name="btn_add_new_appointment">Add new appointment</string>
    <string name="title_activity_manage_calendar">Manage Calendar</string>
    <string name="manage_dates">Manage Dates</string>
    <string name="manage_appoint">Manage Appointments</string>
    <string name="opening_mng_dates">Manage dates</string>
    <string name="btn_choose_date">Choose date</string>
    <string name="btn_date_delete">DEL</string>
    <string name="btn_date_catch">BLOCK</string>
    <string name="appointment_deleted">Appointment deleted!</string>
    <string name="popup_menu_catch_block_date">Do you want to block this date?</string>
    <string name="btn_yes">YES</string>
    <string name="btn_no">No</string>
    <string name="appointment_catch">Appointment is blocked!</string>
    <string name="btn_ok_to_upload">UPLOAD NOW!</string>
    <string name="text_choose_hour">Hour</string>
    <string name="text_choose_min">Min</string>
    <string name="text_duration">Duration</string>
    <string name="btn_choose_date_in_form">CHOOSE</string>
    <string name="btn_add_new_window">OK</string>
    <string name="new_window_added">New window for appointment added successfully!</string>
    <string name="please_choose_date">Please choose date</string>
    <string name="btn_choose_date_for_new">Calendar</string>
    <string name="popup_delete_image_q">Do you want to delete this image from server?</string>
    <string name="file_deleted_successfully">File deleted successfully!</string>
    <string name="export_event_to_calendar">EXPORT</string>
    <string name="action_settings">Settings</string>
    <string name="add_series_of_appointments">Add couple appointments</string>
    <string name="btn_single_appointment">Add appointment</string>
    <string name="btn_all_day_appointments">Fill Day</string>
    <string name="single_appointment_description">In this mode you can add single date for the appointment list</string>
    <string name="all_day_description">In this mode you can fill all day with 4 appointments\n(16:30,18:00,19:30,21:00)</string>
    <string name="str_delete_row_confirm">Do you want to delete this appointment window forever?</string>
    <string name="str_free_row_confirm">Do you want to cancel this appointment?\nIf someone has already caught this window, we recommend you to notify him before the cancellation.</string>
    <string name="string_manage_appointment_types">Treatments Types</string>
    <string name="text_lang_prefix">Lang:</string>
    <string name="text_price_prefix">Price:</string>
    <string name="edit_text_price_hint">PRICE</string>
    <string name="edit_text_hint_lang_hebrew">HEBREW</string>
    <string name="edit_text_hint_lang_english">ENGLISH</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="treatment_edited_successfully">Treatment type update successfully</string>
    <string name="text_lang_hebrew">Lang: Hebrew</string>
    <string name="text_lang_english">Lang: English</string>
    <string name="btn_add">Add</string>
    <string name="hebrew_description_hint">Hebrew description</string>
    <string name="english_description_hint">English description</string>
    <string name="hint_price">Price</string>
    <string name="treatment_added_successfully">Treatment type added successfully</string>
    <string name="warning_delete_treatment_types">Are you sure you want to delete this treatment type?</string>
    <string name="treatment_deleted_successfully">Treatment type deleted successfully</string>
    <string name="title_edit_treatment_type">Edit treatment type</string>
    <string name="title_new_treatment_type">Add new treatment type</string>
</resources>
