<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_marginBottom="?attr/actionBarSize"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="536dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline19">

        <Button
            android:id="@+id/btn"
            style="@style/button_with_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_shape"
            android:gravity="center"
            android:text="@string/choose_photo"
            android:theme="@style/PrimaryButton"
            app:layout_constraintStart_toStartOf="@+id/iv"
            app:layout_constraintTop_toBottomOf="@+id/showGallery" />

        <ImageView
            android:id="@+id/iv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:scaleType="centerInside"
            android:src="@mipmap/ic_launcher"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/guideline12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline11" />

        <Button
            android:id="@+id/showGallery"
            style="@style/button_with_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_shape"
            android:gravity="center"
            android:text="@string/gallery"
            android:theme="@style/PrimaryButton"
            app:layout_constraintEnd_toEndOf="@+id/btn_ok_toUpload"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_mng_calendar"
            style="@style/button_with_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_shape"
            android:text="@string/manage_calendar"
            android:theme="@style/PrimaryButton"
            app:layout_constraintStart_toStartOf="@+id/iv"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="205dp" />

        <Button
            android:id="@+id/btn_ok_toUpload"
            style="@style/button_with_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_shape"
            android:text="@string/btn_ok_to_upload"
            android:theme="@style/PrimaryButton"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/iv"
            app:layout_constraintTop_toBottomOf="@+id/showGallery" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="112dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="619dp" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="75dp" />

</android.support.constraint.ConstraintLayout>